feat: download parameters for geoServer
