# src/main/java/school/hei/geotiler/endpoint/rest/controller/mapper/FeatureMapper.java
@@ -1,14 +1,21 @@
 package school.hei.geotiler.endpoint.rest.controller.mapper;
 
+import java.net.URL;
 import org.springframework.stereotype.Component;
 import school.hei.geotiler.endpoint.rest.model.Feature;
+import school.hei.geotiler.endpoint.rest.model.GeoServerParameter;
 import school.hei.geotiler.repository.model.ZoneTilingTask;
 import school.hei.geotiler.repository.model.geo.Parcel;
 
 @Component
 public class FeatureMapper {
-  public Parcel toDomain(Feature rest) {
-    return Parcel.builder().id(rest.getId()).feature(rest).build();
+  public Parcel toDomain(Feature rest, URL geoServerUrl, GeoServerParameter GeoServerParameter) {
+    return Parcel.builder()
+        .id(rest.getId())
+        .feature(rest)
+        .geoServerUrl(geoServerUrl)
+        .geoServerParameter(GeoServerParameter)
+        .build();
   }
 
   public Feature fromZoneTilingTask(ZoneTilingTask domainTask) {
