# src/main/java/school/hei/geotiler/repository/model/geo/Parcel.java
@@ -1,6 +1,7 @@
 package school.hei.geotiler.repository.model.geo;
 
 import java.io.Serializable;
+import java.net.URL;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
@@ -8,6 +9,7 @@ import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
 import school.hei.geotiler.endpoint.rest.model.Feature;
+import school.hei.geotiler.endpoint.rest.model.GeoServerParameter;
 
 @Builder
 @ToString
@@ -18,4 +20,6 @@ import school.hei.geotiler.endpoint.rest.model.Feature;
 public class Parcel implements Serializable {
   private String id;
   private Feature feature;
+  private URL geoServerUrl;
+  private GeoServerParameter geoServerParameter;
 }
